crates/buff-lang-codegen-rust/tests/snapshots/networking_codegen__connection_codegen_recv_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/networking_codegen.rs
expression: src
---
fn f() {
    let c: Option<tokio::net::TcpStream> = tokio::net::TcpStream::connect(
            format!("{}:{}", "127.0.0.1", 8080),
        )
        .await
        .ok();
    {
        use tokio::io::AsyncReadExt;
        let mut buf: Vec<u8> = Vec::new();
        if let Some(mut s) = c {
            let _ = s.read(&mut buf).await;
        }
        buf
    };
}
