crates/buff-lang-codegen-rust/tests/snapshots/networking_codegen__connection_codegen_send_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/networking_codegen.rs
expression: src
---
fn f() {
    let c: Option<tokio::net::TcpStream> = tokio::net::TcpStream::connect(
            format!("{}:{}", "127.0.0.1", 8080),
        )
        .await
        .ok();
    {
        use tokio::io::AsyncWriteExt;
        if let Some(mut s) = c {
            s.write_all("hello".as_bytes()).await.ok();
        }
    };
}
