crates/buff-lang-codegen-rust/tests/snapshots/networking_codegen__networking_codegen_full_program_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/networking_codegen.rs
assertion_line: 1174
expression: src
---
fn main() {
    let c: Option<tokio::net::TcpStream> = tokio::net::TcpStream::connect(
            format!("{}:{}", "127.0.0.1".to_string(), 8080),
        )
        .await
        .ok();
    let _send = {
        use tokio::io::AsyncWriteExt;
        if let Some(mut s) = c {
            s.write_all("ping".to_string().as_bytes()).await.ok();
        }
    };
    let _recv = {
        use tokio::io::AsyncReadExt;
        let mut buf: Vec<u8> = Vec::new();
        if let Some(mut s) = c.clone() {
            let _ = s.read(&mut buf).await;
        }
        buf
    };
    let _close = {
        use tokio::io::AsyncWriteExt;
        if let Some(mut s) = c.clone() {
            s.shutdown().await.ok();
        }
    };
    let s: Option<tokio::net::UdpSocket> = tokio::net::UdpSocket::bind(
            format!("{}:{}", "0.0.0.0".to_string(), 9090),
        )
        .await
        .ok();
    let _send_to = {
        if let Some(s) = s {
            s.send_to("datagram".to_string().as_bytes(), "127.0.0.1:9999".to_string())
                .await
                .ok();
        }
    };
    let _recv_from = {
        let mut buf = vec![0u8; 65535];
        if let Some(s) = s.clone() {
            return s
                .recv_from(&mut buf)
                .await
                .ok()
                .map(|(n, addr)| (buf[..n].to_vec(), addr.to_string()));
        }
        (Vec::new(), String::new())
    };
    let ws: Option<
        tokio_tungstenite::WebSocketStream<
            tokio_tungstenite::MaybeTlsStream<tokio::net::TcpStream>,
        >,
    > = tokio_tungstenite::connect_async("ws://example.com/socket".to_string())
        .await
        .ok()
        .map(|(ws, _)| ws);
    let _ws_send = {
        use futures_util::SinkExt;
        if let Some(mut s) = ws {
            s.send(tokio_tungstenite::tungstenite::Message::Text("hi".to_string()))
                .await
                .ok();
        }
    };
    let _ws_recv = {
        use futures_util::StreamExt;
        if let Some(mut s) = ws.clone() {
            while let Some(Ok(msg)) = s.next().await {
                if let tokio_tungstenite::tungstenite::Message::Text(t) = msg {
                    return t;
                }
            }
        }
        String::new()
    };
    let _ws_close = {
        use futures_util::SinkExt;
        if let Some(mut s) = ws.clone() {
            s.close(None).await.ok();
        }
    };
    {
        if let Ok(__buff_contents) = std::fs::read_to_string(".env") {
            for __buff_line in __buff_contents.lines() {
                let __buff_line = __buff_line.trim();
                if __buff_line.is_empty() || __buff_line.starts_with('#') {
                    continue;
                }
                if let Some((__buff_key, __buff_val)) = __buff_line.split_once('=') {
                    let __buff_k = __buff_key.trim().to_string();
                    let __buff_v = __buff_val.trim().to_string();
                    if !__buff_k.is_empty() && std::env::var(&__buff_k).is_err() {
                        unsafe {
                            std::env::set_var(&__buff_k, &__buff_v);
                        }
                    }
                }
            }
        }
    }
}
