crates/buff-lang-codegen-rust/tests/snapshots/networking_codegen__socket_codegen_recv_from_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/networking_codegen.rs
assertion_line: 1075
expression: src
---
fn f() {
    let s: Option<tokio::net::UdpSocket> = tokio::net::UdpSocket::bind(
            format!("{}:{}", "0.0.0.0".to_string(), 9090),
        )
        .await
        .ok();
    {
        let mut buf = vec![0u8; 65535];
        if let Some(s) = s {
            return s
                .recv_from(&mut buf)
                .await
                .ok()
                .map(|(n, addr)| (buf[..n].to_vec(), addr.to_string()));
        }
        (Vec::new(), String::new())
    };
}
