crates/buff-lang-codegen-rust/tests/snapshots/networking_codegen__socket_codegen_send_to_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/networking_codegen.rs
expression: src
---
fn f() {
    let s: Option<tokio::net::UdpSocket> = tokio::net::UdpSocket::bind(
            format!("{}:{}", "0.0.0.0", 9090),
        )
        .await
        .ok();
    {
        if let Some(s) = s {
            s.send_to("ping".as_bytes(), "127.0.0.1:9999").await.ok();
        }
    };
}
