crates/buff-lang-codegen-rust/tests/snapshots/networking_codegen__tcp_codegen_connect_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/networking_codegen.rs
assertion_line: 1000
expression: src
---
fn f() {
    tokio::net::TcpStream::connect(format!("{}:{}", "127.0.0.1".to_string(), 8080))
        .await
        .ok();
}
