crates/buff-lang-codegen-rust/tests/snapshots/networking_codegen__udp_codegen_bind_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/networking_codegen.rs
expression: src
---
fn f() {
    tokio::net::UdpSocket::bind(format!("{}:{}", "0.0.0.0", 9090)).await.ok();
}
