crates/buff-lang-codegen-rust/tests/snapshots/networking_codegen__websocket_codegen_connect_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/networking_codegen.rs
expression: src
---
fn f() {
    tokio_tungstenite::connect_async("ws://example.com/socket")
        .await
        .ok()
        .map(|(ws, _)| ws);
}
