crates/buff-lang-codegen-rust/tests/snapshots/networking_codegen__wsconnection_codegen_send_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/networking_codegen.rs
expression: src
---
fn f() {
    let ws: Option<
        tokio_tungstenite::WebSocketStream<
            tokio_tungstenite::MaybeTlsStream<tokio::net::TcpStream>,
        >,
    > = tokio_tungstenite::connect_async("ws://example.com/socket")
        .await
        .ok()
        .map(|(ws, _)| ws);
    {
        use futures_util::SinkExt;
        if let Some(mut s) = ws {
            s.send(tokio_tungstenite::tungstenite::Message::Text("hi")).await.ok();
        }
    };
}
